make php 4 compatible. remove strrpos and replace with my_strrpos function added click on document closes  heart_small
git-svn-id: https://plugins.svn.wordpress.org/commentluv/trunk@125627 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style/cl_style.css
+++ b/style/cl_style.css
@@ -5,7 +5,7 @@
 
 }
 #commentluv {
-	clear: both;
+	clear: both !important;
 }
 #commentluv img{
 	border: 0 !important;
@@ -14,7 +14,9 @@
 .cluv {
 border:1px solid #fff;
 padding: 5px;
-display: block
+display: block;
+font-size: 100% !important;
+text-transform: none !important;
 }
 #lastposts {
         width: 500px;
