updated error message handler so you can see what got sent back if you see an invalid feed error.
added some antispam solutions so clever spammers who change the author url after getting a link to get around akismet can be squatted

made the ajax more efficient and load only the actions it needs for requests.

git-svn-id: https://plugins.svn.wordpress.org/commentluv/trunk@577313 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/commentluv.css
+++ b/css/commentluv.css
@@ -6,6 +6,8 @@ span#mylastpost { clear: both;}
 span#showmorespan { width: 30px; height: 15px; cursor: pointer;}
 div#lastposts { padding: 3px; border: 1px dashed #dfdfdf; background-color: white;}
 input.cl_error { border: 1px solid red !important;}
+.rawfilewrap {border: 1px solid #cdcdcd; padding: 2px; cursor: pointer;}
+.rawfile {display: none; border: 2px dashed #00ff00; padding: 2px; overflow: auto; height: 300px;}
 /** drop down **/
 span.choosepost {background-color: #fff; color: black; line-height: 1.4em; display: block;border-bottom: 1px dashed #bbb;cursor: pointer; margin-bottom: 5px;}
 span.choosepost:hover { font-weight: bolder; text-shadow: #dfdfdf 2px 2px 1px ; filter: Shadow(Color=gray, 
